--- a/Stroke/app/src/main/res/layout/activity_motion.xml
+++ b/Stroke/app/src/main/res/layout/activity_motion.xml
@@ -227,7 +227,7 @@
         android:layout_marginBottom="10dp"
         android:background="@color/colorPrimary"
         android:textColor="@android:color/white"
-        android:text="  Reface testul  "
+        android:text="  Start  "
         android:textSize="20dp" />
 
     <LinearLayout
@@ -262,4 +262,17 @@
                 android:textSize="20dp" />
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_stop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="10dp"
+        android:text="  Stop  "
+        android:background="@color/colorPrimary"
+        android:textColor="@android:color/white"
+        android:textSize="20dp" />
+
 </LinearLayout>
