--- a/Stroke/app/src/main/res/layout/fragment_intro_fragment6.xml
+++ b/Stroke/app/src/main/res/layout/fragment_intro_fragment6.xml
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:padding="20dp"
-            android:text="Deficit motoriu"/>
+            android:text="Daca ai senzatia ca se invart lucrurile in jurul tau, de instabilitate cadn stai in picioare "/>
     </LinearLayout>
 
     <LinearLayout
