--- a/Stroke/app/src/main/res/layout/fragment_intro_fragment7.xml
+++ b/Stroke/app/src/main/res/layout/fragment_intro_fragment7.xml
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="20dp"
-        android:text="Deficit motoriu"/>
+        android:text="Daca ai o durere de cap puternica, greata, varsaturi, devieri la mers"/>
     </LinearLayout>
 
     <LinearLayout
